# material

./: README.md
Ejemplo dash/: app.py  pyproject.toml
Ejemplo implementación/Backend/: app.py  pyproject.toml
Ejemplo implementación/Frontend/: app.py  predicción.csv  pyproject.toml
Ejemplo implementación/Frontend Pages/: app.py  pyproject.toml
Ejemplo implementación/Frontend Pages/pages/: contexto.py  hallazgos.py  predicciones.py
Ejemplo implementación/Frontend Tabs/: app.py  pyproject.toml
Ejemplo implementación/Frontend Tabs/assets/: main.css
Ejemplo implementación/Frontend/assets/: main.css
Ejemplo implementación/ML/: GaussianNB_model.joblib  GaussianNB_model_columns.joblib  loading_model.py  model_creation.py  pyproject.toml
Introducción a desarrollo web/: ejemplo_bootstrap.html  estilos.html  index.html  segunda.html
Introducción a desarrollo web/css/: main.css
