[tool.poetry]
name = "frontend pages"
version = "0.1.0"
description = ""
authors = ["aram-gonzalez-tec <aram.gonzalez@tec.mx>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.3"
dash = "^2.14.1"
dash-ag-grid = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
